@@ -1,16 +1,24 @@
 # mcsr
 Minecraft speedrunning useful resources
 
-fov: 95 with dynamic fov off, quake pro in the end
-sens: ~24cm/360° - (idfk dpi) it takes 3.1 cm to go from left to right of open inventory
-keybinds: Q234RVXCF, drop=caps, offhand=mouse4, f5=mouse5, f3=dpi button
-
-- Rayoh's grass overlay: https://www.mediafire.com/file/buoixjsalyjdti7/rayoh%2527s_grass_overlay.zip/file
-- Emma's One Cycle Map https://sites.google.com/view/emma-practice-map/home
-- Jojoe's End Fight Map https://github.com/jojoe77777/PerchPractice/releases/latest
-- SSG taiga seed Portals/Chests Map https://drive.google.com/file/d/1m7M5q6TECeMsEyiJs8qzl-S62cjev1gh/view?usp=sharing
-- Semperzz's Portals Map https://www.mediafire.com/file/2i8irzdzrjishsv/Portal_Practice.zip/file
-
-- RSG Reset Tracker https://www.youtube.com/watch?v=TdnQpkOyrJo
-- Performance mods https://www.youtube.com/watch?v=GboL7G8Q79o
-- Starlight mod (still illegal, but imagine if I cared -  way faster world loading): https://github.com/Spottedleaf/Starlight
+fov: 95 with dynamic fov off, quake pro in the end  
+sens: ~24cm/360° - (idfk dpi) it takes 3.1 cm to go from left to right of open inventory  
+keybinds: Q234RVXCF, drop=caps, offhand=mouse4, f5=mouse5, f3=dpi button  
+1. **MultiMC**  
+way better launcher https://multimc.org/#Download
+3. **Performance & mods**  
+Java args: `-XX:+UseZGC`  
+use latest Java (for ex. https://www.oracle.com/java/technologies/javase-jdk16-downloads.html)  
+Performance mods https://www.youtube.com/watch?v=GboL7G8Q79o  
+other mods: https://github.com/modmuss50/Voyager, https://www.curseforge.com/minecraft/mc-mods/motiono  
+Starlight mod (still illegal, imagine if I cared -  way faster world loading): https://github.com/Spottedleaf/Starlight
+4. **OBS**  
+recording software https://obsproject.com/download
+6. **MAPS**  
+Jojoe's End Fight Map https://github.com/jojoe77777/PerchPractice/releases/latest  
+SSG taiga seed Portals/Chests Map https://drive.google.com/file/d/1m7M5q6TECeMsEyiJs8qzl-S62cjev1gh/view?usp=sharing  
+Semperzz's Portals Map https://www.mediafire.com/file/2i8irzdzrjishsv/Portal_Practice.zip/file  
+Emma's One Cycle Map https://sites.google.com/view/emma-practice-map/home  
+6. Other cool shit  
+RSG Reset Tracker https://www.youtube.com/watch?v=TdnQpkOyrJo  
+Rayoh's grass overlay: https://www.mediafire.com/file/buoixjsalyjdti7/rayoh%2527s_grass_overlay.zip/file
